--- a/NODE_SERVER_BASE/NODE_SERVER_BASE/package.json
+++ b/NODE_SERVER_BASE/NODE_SERVER_BASE/package.json
@@ -22,15 +22,20 @@
     "express": "~4.16.1",
     "hat": "^0.0.3",
     "http-errors": "~1.6.3",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.16",
     "pug": "2.0.0-beta11",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.21.7",
+    "sharp": "^0.26.3",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
