--- a/RN_BASE_0.61/package.json
+++ b/RN_BASE_0.61/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-i18next": "^9.0.10",
     "react-native": "0.61.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-code-push": "^5.7.0",
     "react-native-dropdownalert": "^4.2.0",
     "react-native-elements": "^1.2.7",
@@ -32,6 +33,7 @@
     "react-native-onesignal": "^3.4.2",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.4",
