--- a/RN_BASE_0.61/package.json
+++ b/RN_BASE_0.61/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-i18next": "^9.0.10",
     "react-native": "0.61.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-code-push": "^5.7.0",
     "react-native-dropdownalert": "^4.2.0",
     "react-native-elements": "^1.2.7",
